--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://img.icons8.com/?size=512&id=SPIi4dtQGDLy&format=png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MoviesVerse</title>
 </head>
